--- a/2-Data Analysis/2-Pandas/7_Merge-and-Join.ipynb
+++ b/2-Data Analysis/2-Pandas/7_Merge-and-Join.ipynb
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
        "3           HR   Sue   90000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2202,7 @@
        "0  Mary  bread  wine"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2228,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2273,7 +2273,7 @@
        "0  Mary  bread  wine"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
        "3  Joseph    NaN  beer"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2626,7 @@
        "2   Mary  bread  wine"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
        "3   Sue       4       2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2864,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3043,7 +3043,7 @@
        "3   Sue       4       2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3099,7 +3099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3303,7 +3303,7 @@
        "4  California           CA"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3330,9 +3330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3415,7 +3423,7 @@
        "4           AL  under18  2011   1125763.0  Alabama"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3436,7 +3444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3450,7 +3458,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3468,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3553,13 +3561,13 @@
        "2452           PR    total  1993         NaN   NaN"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged[merged['population'].isnull()].head()"
+    "merged[merged['population'].isnull()].head()  # df[df.columna1 > 100, [\"col3\", \"col5\"]]"
    ]
   },
   {
@@ -3570,6 +3578,26 @@
     "\n",
     "More importantly, we see also that some of the new ``state`` entries are also null, which means that there was no corresponding entry in the ``abbrevs`` key!\n",
     "Let's figure out which regions lack this match:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Toni'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice([\"Adrián\", \"Toni\", \"Sara\", \"Mónica\", \"Claudia\", \"Laura L\", \"Laura G\", \"Zino\", \"Adán\", \"Manuel\", \"Pablo\", \"Arturo\", \"Alfredo\"])"
    ]
   },
   {
@@ -3593,6 +3621,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(merged.loc[merged['state'].isnull(), ['state/region'] ])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3602,7 +3650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3616,7 +3664,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3639,7 +3687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3730,7 +3778,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3782,7 +3830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3791,13 +3839,75 @@
        "array(['United States'], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final['state'][final['area (sq. mi)'].isnull()].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             Alabama\n",
+       "1             Alabama\n",
+       "2             Alabama\n",
+       "3             Alabama\n",
+       "4             Alabama\n",
+       "            ...      \n",
+       "2539    United States\n",
+       "2540    United States\n",
+       "2541    United States\n",
+       "2542    United States\n",
+       "2543    United States\n",
+       "Name: state, Length: 2544, dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final['state']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2       False\n",
+       "3       False\n",
+       "4       False\n",
+       "        ...  \n",
+       "2539     True\n",
+       "2540     True\n",
+       "2541     True\n",
+       "2542     True\n",
+       "2543     True\n",
+       "Name: area (sq. mi), Length: 2544, dtype: bool"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final['area (sq. mi)'].isnull()"
    ]
   },
   {
@@ -3810,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3901,7 +4011,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3921,7 +4031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4012,7 +4122,7 @@
        "197           CA  total  2010  37333601.0  California       163707.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4032,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4042,7 +4152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4057,7 +4167,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4065,6 +4175,159 @@
    "source": [
     "density.sort_values(ascending=False, inplace=True)\n",
     "density.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "Alaska                     1.087509\n",
+       "Wyoming                    5.768079\n",
+       "Montana                    6.736171\n",
+       "North Dakota               9.537565\n",
+       "South Dakota              10.583512\n",
+       "New Mexico                16.982737\n",
+       "Idaho                     18.794338\n",
+       "Nebraska                  23.654153\n",
+       "Nevada                    24.448796\n",
+       "Utah                      32.677188\n",
+       "Kansas                    34.745266\n",
+       "Maine                     37.509990\n",
+       "Oregon                    39.001565\n",
+       "Colorado                  48.493718\n",
+       "Oklahoma                  53.778278\n",
+       "Iowa                      54.202751\n",
+       "Arkansas                  54.948667\n",
+       "Arizona                   56.214497\n",
+       "Minnesota                 61.078373\n",
+       "Mississippi               61.321530\n",
+       "Vermont                   65.085075\n",
+       "West Virginia             76.519582\n",
+       "Missouri                  86.015622\n",
+       "Wisconsin                 86.851900\n",
+       "Louisiana                 87.676099\n",
+       "Alabama                   91.287603\n",
+       "Texas                     93.987655\n",
+       "Washington                94.557817\n",
+       "Michigan                 102.015794\n",
+       "Kentucky                 107.586994\n",
+       "Hawaii                   124.746707\n",
+       "New Hampshire            140.799273\n",
+       "South Carolina           144.854594\n",
+       "Tennessee                150.825298\n",
+       "Georgia                  163.409902\n",
+       "North Carolina           177.617157\n",
+       "Indiana                  178.197831\n",
+       "Virginia                 187.622273\n",
+       "Illinois                 221.687472\n",
+       "California               228.051342\n",
+       "Ohio                     257.549634\n",
+       "Pennsylvania             275.966651\n",
+       "Florida                  286.597129\n",
+       "New York                 356.094135\n",
+       "Delaware                 460.445752\n",
+       "Maryland                 466.445797\n",
+       "Massachusetts            621.815538\n",
+       "Connecticut              645.600649\n",
+       "Rhode Island             681.339159\n",
+       "New Jersey              1009.253268\n",
+       "Puerto Rico             1058.665149\n",
+       "District of Columbia    8898.897059\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nueva_serie_ordenada = density.sort_values()\n",
+    "density = density.sort_values()   # o esta opcion\n",
+    "density.sort_values(inplace = True)  # o esta opcion\n",
+    "\n",
+    "\n",
+    "print(density.sort_values())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "District of Columbia    8898.897059\n",
+       "Puerto Rico             1058.665149\n",
+       "New Jersey              1009.253268\n",
+       "Rhode Island             681.339159\n",
+       "Connecticut              645.600649\n",
+       "Massachusetts            621.815538\n",
+       "Maryland                 466.445797\n",
+       "Delaware                 460.445752\n",
+       "New York                 356.094135\n",
+       "Florida                  286.597129\n",
+       "Pennsylvania             275.966651\n",
+       "Ohio                     257.549634\n",
+       "California               228.051342\n",
+       "Illinois                 221.687472\n",
+       "Virginia                 187.622273\n",
+       "Indiana                  178.197831\n",
+       "North Carolina           177.617157\n",
+       "Georgia                  163.409902\n",
+       "Tennessee                150.825298\n",
+       "South Carolina           144.854594\n",
+       "New Hampshire            140.799273\n",
+       "Hawaii                   124.746707\n",
+       "Kentucky                 107.586994\n",
+       "Michigan                 102.015794\n",
+       "Washington                94.557817\n",
+       "Texas                     93.987655\n",
+       "Alabama                   91.287603\n",
+       "Louisiana                 87.676099\n",
+       "Wisconsin                 86.851900\n",
+       "Missouri                  86.015622\n",
+       "West Virginia             76.519582\n",
+       "Vermont                   65.085075\n",
+       "Mississippi               61.321530\n",
+       "Minnesota                 61.078373\n",
+       "Arizona                   56.214497\n",
+       "Arkansas                  54.948667\n",
+       "Iowa                      54.202751\n",
+       "Oklahoma                  53.778278\n",
+       "Colorado                  48.493718\n",
+       "Oregon                    39.001565\n",
+       "Maine                     37.509990\n",
+       "Kansas                    34.745266\n",
+       "Utah                      32.677188\n",
+       "Nevada                    24.448796\n",
+       "Nebraska                  23.654153\n",
+       "Idaho                     18.794338\n",
+       "New Mexico                16.982737\n",
+       "South Dakota              10.583512\n",
+       "North Dakota               9.537565\n",
+       "Montana                    6.736171\n",
+       "Wyoming                    5.768079\n",
+       "Alaska                     1.087509\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "density"
    ]
   },
   {
@@ -4079,7 +4342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4094,7 +4357,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
